resources/back-end-deployment-blue.yml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: back-end-deployment 
  namespace: p3-space  
  labels: 
    app: e-commerce

spec: # Specifications for the Deployment!
  replicas: 1
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 0
  selector: 
    matchLabels: 
      app: e-commerce
      color: blue
  template: 
    metadata: 
      labels: 
        app: e-commerce
        color: blue
    spec: # specification for the pod itself now!
      containers: 
        - name: back-end-deployment
          image: elrintowser/p3-backend
          ports:
            - containerPort: 5000
          imagePullPolicy: Always
          resources:
            limits:
              memory: "500Mi"
              cpu: "500m"
            requests:
              memory: "300Mi"
              cpu: "200m"
